[gd_scene load_steps=62 format=3 uid="uid://ftqqj6113t28"]

[ext_resource type="Script" path="res://Scripts/Enemy/goblin_torch.gd" id="1_dauif"]
[ext_resource type="Shader" path="res://Scenes/Shaders/player_damage.gdshader" id="2_oolxi"]
[ext_resource type="Texture2D" uid="uid://b0q2abkqxi5xa" path="res://Assets/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Red/Torch_Red.png" id="3_xxij7"]
[ext_resource type="Texture2D" uid="uid://rp2jr6y4kehn" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Dead/Dead.png" id="4_c7y5k"]
[ext_resource type="Script" path="res://Scripts/Enemy/StateMachine.gd" id="5_ijid1"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyWander.gd" id="6_pe4vp"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyFollow.gd" id="7_rgr1q"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyAttack.gd" id="8_yjkbg"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyDead.gd" id="9_uubq2"]
[ext_resource type="Texture2D" uid="uid://cn8p116js2bii" path="res://Assets/light.png" id="10_n81kv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qss17"]
shader = ExtResource("2_oolxi")
shader_parameter/opacity = 1.0
shader_parameter/r = null
shader_parameter/g = null
shader_parameter/b = null
shader_parameter/mix_color = null

[sub_resource type="AtlasTexture" id="AtlasTexture_66jh6"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_32so5"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3p8l"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb60i"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8pim"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk64k"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_msd7o"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eqko"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_whemj"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_una2y"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5du2"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr1km"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpflb"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pojf2"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7d77"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_peiba"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpb4p"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3utio"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofw2b"]
atlas = ExtResource("4_c7y5k")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbfo1"]
atlas = ExtResource("4_c7y5k")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1lc7"]
atlas = ExtResource("4_c7y5k")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_axxod"]
atlas = ExtResource("4_c7y5k")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_em22s"]
atlas = ExtResource("4_c7y5k")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi4dn"]
atlas = ExtResource("4_c7y5k")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_plxid"]
atlas = ExtResource("4_c7y5k")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_exa0o"]
atlas = ExtResource("4_c7y5k")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_grb2w"]
atlas = ExtResource("4_c7y5k")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qbea"]
atlas = ExtResource("4_c7y5k")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mxd1"]
atlas = ExtResource("4_c7y5k")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6ypw"]
atlas = ExtResource("4_c7y5k")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nbe6"]
atlas = ExtResource("4_c7y5k")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2par"]
atlas = ExtResource("4_c7y5k")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bagok"]
atlas = ExtResource("4_c7y5k")
region = Rect2(512, 27, 128, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0ckc"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7eos"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ils"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1id87"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2hpt"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb0rb"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk6k5"]
atlas = ExtResource("3_xxij7")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdy76"]
atlas = ExtResource("3_xxij7")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2h2f"]
atlas = ExtResource("3_xxij7")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2exm"]
atlas = ExtResource("3_xxij7")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmeci"]
atlas = ExtResource("3_xxij7")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vo0t"]
atlas = ExtResource("3_xxij7")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_58s4q"]
atlas = ExtResource("3_xxij7")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_xg5rr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66jh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32so5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3p8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb60i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8pim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk64k")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msd7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eqko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whemj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_una2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5du2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr1km")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpflb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pojf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7d77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peiba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpb4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3utio")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofw2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbfo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1lc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axxod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em22s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi4dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plxid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exa0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grb2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qbea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mxd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6ypw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nbe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2par")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bagok")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0ckc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7eos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ils")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1id87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2hpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb0rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk6k5")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdy76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2h2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2exm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmeci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vo0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58s4q")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hqfg7"]
radius = 20.0
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_khh3g"]
radius = 34.0
height = 72.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eysye"]
size = Vector2(44, 94)

[node name="goblin_torch" type="CharacterBody2D" groups=["Enemy"]]
motion_mode = 1
script = ExtResource("1_dauif")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
material = SubResource("ShaderMaterial_qss17")
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_xg5rr")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(-2, -4)
shape = SubResource("CapsuleShape2D_hqfg7")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_ijid1")
initial_state = NodePath("Wander")

[node name="Wander" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_pe4vp")
enemy = NodePath("../..")
move_speed = 50.0

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_rgr1q")
enemy = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_yjkbg")
enemy = NodePath("../..")

[node name="Dead" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_uubq2")
enemy = NodePath("../..")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-4, -19)
shape = SubResource("CapsuleShape2D_khh3g")

[node name="TimerTakeDamage" type="Timer" parent="."]
wait_time = 0.3

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 1
y_sort_enabled = true
layout_direction = 1
offset_left = -45.0
offset_top = -81.0
offset_right = 45.0
offset_bottom = -69.0
max_value = 50.0
value = 50.0
rounded = true
show_percentage = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(-3, -25)
scale = Vector2(1.015, 1.015)
color = Color(1, 0.835294, 0, 1)
energy = 0.8
texture = ExtResource("10_n81kv")

[node name="TorchPivot" type="Marker2D" parent="."]

[node name="TorchAttackPoint" type="Marker2D" parent="TorchPivot"]

[node name="TorchArea" type="Area2D" parent="TorchPivot/TorchAttackPoint" groups=["GoblinTorch"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TorchPivot/TorchAttackPoint/TorchArea"]
position = Vector2(56, -25)
shape = SubResource("RectangleShape2D_eysye")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="TimerTakeDamage" to="." method="_on_timer_take_damage_timeout"]
[connection signal="timeout" from="Timer" to="StateMachine/Attack" method="_on_timer_timeout"]
